<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1b"
    tools:context=".RoutineActivity">

    <TextView
        android:id="@+id/welcomeId"
        android:layout_width="254dp"
        android:layout_height="83dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/tulpen_one"
        android:text="@string/routineTitle"
        android:textColor="#FFFFFF"
        android:textSize="96sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#0000FF"
        android:text="@string/blue_led"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGreen"
        app:layout_constraintTop_toBottomOf="@+id/welcomeId" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FF0000"
        android:text="@string/red_led"
        app:layout_constraintEnd_toStartOf="@+id/buttonGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeId" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00FF00"
        android:text="@string/green_led"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlue"
        app:layout_constraintStart_toEndOf="@+id/buttonRed"
        app:layout_constraintTop_toBottomOf="@+id/welcomeId" />

    <SeekBar
        android:id="@+id/brightnessSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlue" />

    <EditText
        android:id="@+id/lightTimerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/light_timer_seconds"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightnessSeekBar" />

    <EditText
        android:id="@+id/floodlightTimerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/floodlight_timer_seconds"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightTimerEditText" />

    <EditText
        android:id="@+id/awningOpenEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/awning_open_time_minutes"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floodlightTimerEditText"
        android:importantForAutofill="no"
         />

    <EditText
        android:id="@+id/awningCloseEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/awning_close_time_minutes"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awningOpenEditText" />

    <Spinner
        android:id="@+id/musicSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/musicVolumeSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/awningCloseEditText" />

    <SeekBar
        android:id="@+id/musicVolumeSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/musicSpinner"
        app:layout_constraintEnd_toStartOf="@+id/musicTimerEditText"
        app:layout_constraintTop_toBottomOf="@+id/awningCloseEditText" />

    <EditText
        android:id="@+id/musicTimerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/music_timer_seconds"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/musicVolumeSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awningCloseEditText" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicTimerEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
